--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="flex-container">
+    <section>
         <div class="half-width">
             <div class="head-border">
                 <h1>Stay Focused on <br> <span class="orange-color"> Mission 2022 </span></h1>
@@ -57,8 +57,36 @@
             </div>
         </div>
     </section>
+    <section class="developer-limites">
+        <div class="half-width">
+            <img src="images/coding.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Develope Without Limites</h2>
+            <P>Our greatest weakness lies in giving up.The most certain way to succeed is always try to learn and work
+                hard without limites.We have to keep learning and parctising.Though Web Development is a complicated
+                thing but not for those who enjoy it and work dedicatedly.</P>
+            <a class="link-button" target="blank" href="">Read the Documentation</a>
+        </div>
+    </section>
+    <section class="fourth-part">
+        <div class="half-width">
+            <h2>Know our Global Community</h2>
+            <p>Learning about our global community takes young readers on a journey beyond their own communities to
+                learn about aspects of daily life in other places around the world.Inviting texts,accessible maps,and
+                vibrant photographs work together to explain how cultural and environmental characteristics affect
+                people's lives and help determine how they meet their needes.</p>
+            <a class="link-button" target="blank" href="">Read the Documentation</a>
+        </div>
+        <div class="half-width">
+            <img src="images/project.png" alt="">
 
-
+        </div>
+    </section>
+    <footer>
+        <h2><i>Mission <span id="footer-h2">2022</span></i></h2>
+        <p>Hardwork perseverance is the key to success</p>
+    </footer>
 </body>
 
 </html>
