--- a/index.html
+++ b/index.html
@@ -83,9 +83,28 @@
 
         </div>
     </section>
+    <section class="about-me">
+        <Div class="half-width">
+            <img id="about-image" src="./images/web1.png" alt="">
+        </Div>
+        <div class="half-width">
+            <h1>Web Development in Bangladesh</h1>
+            <p>According to research performed by Oxford Internet Institute, Bangladesh came out the only second to
+                India in availability and scale of freelancers for software development and the majority of this larger
+                skill is for web development work. In the recent few years, web development in Bangladesh is the most
+                trendy term where web developers are growing rapidly in the marketplace. That is not only web developing
+                is an exciting job but also through the digital era now youths are being involved in the freelancing
+                profession and from these aspects, Web development is the fabulous choice. Web developers in Bangladesh
+                are working in various platforms like in the biggest online marketplace, in the local marketplace or in
+                the industry-based platform. As a result, Bangladesh is getting some software developers as well as web
+                developers.
+            </p>
+        </div>
+
+    </section>
     <footer>
         <h2><i>Mission <span id="footer-h2">2022</span></i></h2>
-        <p>Hardwork perseverance is the key to success</p>
+        <p>Hardwork,Perseverance and Determination for 2022</p>
     </footer>
 </body>
 
